--- a/views/game.erb
+++ b/views/game.erb
@@ -13,3 +13,9 @@
     <% end %>
   </ul>
 </div>
+
+<script type="text/javascript">
+  $(function() {
+    window.game = new Game();
+  });
+</script>
