Add UI to select/deselect a house card

--- a/views/house.erb
+++ b/views/house.erb
@@ -23,3 +23,9 @@
     <% end %>
   </ul>
 </div>
+
+<script type="text/javascript">
+  $(function() {
+    window.house = new House();
+  });
+</script>
