--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <title>Game of Thrones Board Game: House Cards Reference</title>
 
     <%= css_url("/vendor/jquery.mobile-1.3.0.css") %>
+    <%= css_url("/scss/main.css") %>
     <%= js_bundle(:vendor_js) %>
     <%= js_bundle(:app_js) %>
   </head>
