--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,8 +5,26 @@
 
     <%= css_url("/vendor/jquery.mobile-1.3.0.css") %>
     <%= css_url("/scss/main.css") %>
+   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+<!--
+ 
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.3.1/jquery.mobile.min.js'></script>
+
+-->
+
+
     <%= js_bundle(:vendor_js) %>
+
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+
+    <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js'></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.marionette/1.0.1-bundled/backbone.marionette.min.js'></script>
+
     <%= js_bundle(:app_js) %>
+
+    
   </head>
   <body>
     <div data-role="page" id="mainPageDiv">
