--- a/views/app.erb
+++ b/views/app.erb
@@ -3,23 +3,40 @@
 		gotApp = new Marionette.Application();
 		gotApp.addRegions({
 			nav:'div#nav-region',
+			games:'div#games-region',
 		});
 		gotApp.addInitializer(function(options){
 			var nav_view = new NavView();
+			var games_view = new GamesView({collection:options.games});
 
 			gotApp.nav.show(nav_view);
+			gotApp.games.show(games_view);
 		});
 
-		gotApp.start({games:<%= games.values.map(&:state).to_json %>});
+		var games = new GamesCollection([{'name':'hi'},{'name':'bob'}]);
+//<%= games.values.map(&:state).to_json %>
+		gotApp.start({games:games, });
 	});
 
 </script>
 
+<script type='text/template' id="games_template">
+	<thead><tr><th>Name</th></tr></thead>
+	<tbody>
+	</tbody>
+</script>
+
+<script type='text/template' id='game_template'>
+	<td><span class='name'></span></td>
+</script>
+
 <div class="container">
-	<div id='nav-region'>
+	<div id='nav-region'></div>
+	<div id='games-region'></div>
 </div>
 
-<script type='text/template', id='nav_template'>
+<script type='text/template' id='nav_template'>
+	<button class='btn btn-back'>Back</button>
 	<button class='btn btn-create'>New Game</button>
 	<div>
 		<input type='text'></input>
@@ -28,6 +45,3 @@
 </script>
 
 
-<script type='text/template', id='house_template'>
-
-</script>
