--- a/views/app.erb
+++ b/views/app.erb
@@ -2,26 +2,22 @@
 	$(function(){
 		gotApp = new Marionette.Application();
 		gotApp.addRegions({
-			nav:'div#nav-region',
-			games:'div#games-region',
+			container:'div.container',
 		});
+
 		gotApp.addInitializer(function(options){
-			var nav_view = new NavView();
-			var games_view = new GamesView({collection:options.games});
-
-			gotApp.nav.show(nav_view);
-			gotApp.games.show(games_view);
+			var layout = new AppLayout({collection:options.games});
+			gotApp.container.show(layout);
 		});
 
-		var games = new GamesCollection([{'name':'hi'},{'name':'bob'}]);
-//<%= games.values.map(&:state).to_json %>
+		var games = new GamesCollection(<%= games.values.map(&:state).to_json %>);
 		gotApp.start({games:games, });
 	});
 
 </script>
 
 <script type='text/template' id="games_template">
-	<thead><tr><th>Name</th></tr></thead>
+	<thead><tr><th>Games</th></tr></thead>
 	<tbody>
 	</tbody>
 </script>
@@ -30,18 +26,25 @@
 	<td><span class='name'></span></td>
 </script>
 
-<div class="container">
-	<div id='nav-region'></div>
-	<div id='games-region'></div>
-</div>
 
-<script type='text/template' id='nav_template'>
-	<button class='btn btn-back'>Back</button>
-	<button class='btn btn-create'>New Game</button>
-	<div>
-		<input type='text'></input>
-		<button class='btn btn-load'>Join</button>
+<script type='text/template' id='layout_template'>
+	<div class='navbar navbar-static-top'>
+		<div class='navbar-inner'>
+			<button class='btn btn-back'>Back</button>
+			<button class='btn btn-create'>New</button>
+			<ul class='nav pull-right'>
+					<li ><a href='#'>Games</a></li>
+					<li><a href='#'>Houses</a></li>
+			</ul>		
+		</div>
+	</div>
+	<div id='main-region'></div>
+</script>
+
+<script type='text/template' id='houses_template'>
+	<div data-role='collapsible-set' data-theme='c' data-content-theme'd'>		
 	</div>
 </script>
 
 
+<div class="container"></div>
