--- a/views/game.erb
+++ b/views/game.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div data-role="content">
-  <ul data-role="listview" data-inset="true">
+  <ul data-role="listview" data-inset="false">
     <% game.houses.keys.each do |house_name| %>
       <li data-icon="false">
         <a href="#" data-house-name="<%= house_name %>" class="house-link">
