game -> house -> card navigation done

--- a/views/app.erb
+++ b/views/app.erb
@@ -29,7 +29,6 @@ $(document).bind("mobileinit", function(){
 	</tbody>
 </script>
 
-
 <script type='text/template' id='game_template'>
 	<td></td>
 </script>
@@ -49,14 +48,8 @@ $(document).bind("mobileinit", function(){
 
 <script type='text/template' id='houses_template'>	
 	<tbody>
-	<tr><td><a href="#">Baratheon</a></td></tr>
-	<tr><td><a href="#">Lannister</a></td></tr>
-	<tr><td><a href="#">Stark</a></td></tr>
-	<tr><td><a href="#">Greyjoy</a></td></tr>
-	<tr><td><a href="#">Tyrell</a></td></tr>
-	<tr><td><a href="#">Martell</a></td></tr>
 	</tbody>
 </script>
 
 
-<div id="layout-region"></div>
+<div class='container' id="layout-region"></div>
