--- a/views/appshell.erb
+++ b/views/appshell.erb
@@ -5,7 +5,7 @@
 
    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <%= css_url("/scss/main.css") %>
- 
+
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
 
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
@@ -14,9 +14,7 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/backbone.marionette/1.0.1-bundled/backbone.marionette.min.js'></script>
 
-    <%= js_bundle(:app_js) %>
-
-    
+    <%= js_url("js/game_app.js") %>
   </head>
   <body>
       <%= yield %>
