Code style changes: Move some css to a single line

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,34 +1,18 @@
 .table {
-	tr{
-	height:50px;
-	}
-	td {
-		vertical-align:middle;
-	}
+  tr{ height:50px; }
+  td { vertical-align:middle; }
 }
 
-#baratheon-cards .badge {
-    background-color: rgb(255,205, 31);
-}
-
-#lannister-cards .badge {
- background-color: rgb(153, 41, 29);   
-}
+#baratheon-cards .badge { background-color: rgb(255,205, 31); }
+#lannister-cards .badge { background-color: rgb(153, 41, 29); }
+#greyjoy-cards .badge { background-color: black; }
+#tyrell-cards .badge { background-color: rgb(51, 120, 43); }
+#martell-cards .badge { background-color: rgb(255, 4, 0); }
 
 #stark-cards .badge {
- background-color: rgb(235, 234, 225);
- color: rgb(60,60,60);   
+  background-color: rgb(235, 234, 225);
+  color: rgb(60,60,60);
 }
 
-#greyjoy-cards .badge {
-    background-color: black;
-}
 
-#tyrell-cards .badge {
-    background-color: rgb(51, 120, 43);
-}
-
-#martell-cards .badge {
-    background-color: rgb(255, 4, 0);
-}
 
