CSS tweak for Stark

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -14,7 +14,7 @@
   color: rgb(60,60,60);
 }
 
-.badge.badge-important {background-color: #666666; }
+.badge.badge-important {background-color: #666666; color: white;}
 
 .house, .navbar #house { text-transform:capitalize; }
 
